--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,24 +20,26 @@
   <body>
     <header>
       <div id="logoAndTitle">
-        <div><a href="/" id="logo"><img
-              src="/images/copycatlogo.png"
-              alt="logo for page"
-            /></a></div>
-        <h1 id="titleOfSite"><a href="/">Copy Cat Games</a>
+        <div>
+          <a href="/" id="logo">
+            <img src="/images/copycatlogo.png" alt="Logo for Page" />
+          </a>
+        </div>
+        <h1 id="titleOfSite">
+          <a href="/">Copy Cat Games</a>
         </h1>
       </div>
       <nav>
         <h2><a href="/forum" class="text-decoration-none">Forums</a></h2>
         <h2><a href="/store" class="text-decoration-none">Store</a></h2>
         {{#if loggedIn}}
-          <h2><a
-              id="logout"
-              class="text-decoration-none"
-              href="/"
-            >Logout</a></h2>
+          <h2>
+            <a id="logout" class="text-decoration-none" href="/">Logout</a>
+          </h2>
         {{else}}
-          <h2><a href="/login" class="text-decoration-none">Login</a></h2>
+          <h2>
+            <a href="/login" class="text-decoration-none">Login</a>
+          </h2>
         {{/if}}
       </nav>
     </header>
@@ -45,7 +47,14 @@
       {{{body}}}
     </main>
     <footer>
-      <h6>Created By Casey, Kole, John, and Amir</h6>
+      <h6>Created By
+        <a
+          href="https://github.com/KCaseyChamberlain"
+          target="_blank"
+        >Casey</a>,
+        <a href="https://github.com/BullMooseDev" target="_blank">Kole</a>,
+        <a href="https://github.com/JohnKnee3" target="_blank">John</a>, and
+        <a href="https://github.com/AShariat" target="_blank">Amir</a></h6>
     </footer>
     {{#if loggedIn}}
       <script src="/js/logout.js"></script>
