--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -23,7 +23,9 @@
           class="form-control mb-2"
           placeholder="Say Something Nice!"
         ></textarea>
-        <button type="submit" class="col-12">Submit</button>
+        <div class="col-12">
+          <button type="submit" class="form-button">Submit</button>
+        </div>
       </form>
     </div>
   {{else}}
