--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -85,7 +85,7 @@
           src="/images/{{article.images.0.filename}}"
           alt="{{article.title}}"
         />
-        <h3 id="homepage-icon-titles" class="text-start card-title">
+        <h3 id="homepage-icon-titles" class="text-start card-title mt-2">
           {{article.title}}
         </h3>
       </a>
