--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,35 @@
-<div class="login-logout">
-  <form class="login-form">
-    <div class="form-label-input">
-      <label class="form-label" for="email-login">Email:</label>
-      <input class="form-input" type="email" id="email-login" />
-    </div>
-    <div class="form-label-input">
-      <label class="form-label" for="password-login">Password:</label>
-      <input class="form-input" type="password" id="password-login" />
-    </div>
-    <div>
-      <button class="form-button" type="submit">Login</button>
-    </div>
-  </form>
-  <form class="signup-form">
-    <div class="form-label-input">
-      <label class="form-label" for="username-signup">Username:</label>
-      <input class="form-input" type="text" id="username-signup" />
-    </div>
-    <div class="form-label-input">
-      <label class="form-label" for="email-signup">Email:</label>
-      <input class="form-input" type="email" id="email-signup" />
-    </div>
-    <div class="form-label-input">
-      <label class="form-label" for="password-signup">Password:</label>
-      <input class="form-input" type="password" id="password-signup" />
-    </div>
-    <div>
-      <button class="form-button" type="submit">Signup</button>
-    </div>
-  </form>
+<div class="row my-5 d-flex justify-content-center">
+  <div class="col-xxl-6 row">
+    <form class="login-form col-12 my-5">
+      <div class="col-12">
+        <label class="form-label" for="email-login">Email:</label>
+        <input class="form-control" type="email" id="email-login" />
+      </div>
+      <div class="col-12">
+        <label class="form-label" for="password-login">Password:</label>
+        <input class="form-control" type="password" id="password-login" />
+      </div>
+      <div class="col-12 mt-3">
+        <button class="form-button" type="submit">Login</button>
+      </div>
+    </form>
+    <form class="signup-form col-12 my-5">
+      <div class="col-12">
+        <label class="form-label" for="username-signup">Username:</label>
+        <input class="form-control" type="text" id="username-signup" />
+      </div>
+      <div class="col-12">
+        <label class="form-label" for="email-signup">Email:</label>
+        <input class="form-control" type="email" id="email-signup" />
+      </div>
+      <div class="col-12">
+        <label class="form-label" for="password-signup">Password:</label>
+        <input class="form-control" type="password" id="password-signup" />
+      </div>
+      <div class="col-12 mt-3">
+        <button class="form-button" type="submit">Signup</button>
+      </div>
+    </form>
+  </div>
 </div>
 <script src="/js/login.js"></script>
