--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -73,6 +73,7 @@
 {{! below is the handlebars for the articles on the main page }}
 <div class="row my-5">
   {{#each articles as |article|}}
+
     <div
       class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
     >
@@ -88,6 +89,9 @@
         <h3 id="homepage-icon-titles" class="text-start card-title mt-2">
           {{article.title}}
         </h3>
+        <p>{{format_date article.created_at}}</p>
+        <p>{{article.description}} </p>
+
       </a>
     </div>
   {{/each}}
