store page style done and responsive

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -81,7 +81,7 @@
         href="/article/{{id}}"
       >
         <img
-          class="homepage-images-art card-img-top"
+          class="images card-img-top"
           src="/images/{{article.images.0.filename}}"
           alt="{{article.title}}"
         />
