--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -1,55 +1,117 @@
-<a
-  class="games text-decoration-none"
-  href="https://www.miniaturemarket.com/pex2002.html"
-  target="_blank"
->
-  <img
-    class="images-art"
-    src="/images/Long-Shot-Box.jpg"
-    alt="Long Shot: The Dice Game"
-  />
-  <h3>
-    Long Shot: The Dice Game
-  </h3>
-</a>
-
-<a
-  class="games text-decoration-none"
-  href="https://www.miniaturemarket.com/ffgti07.html"
-  target="_blank"
->
-  <img
-    class="images-art"
-    src="/images/TI-Box.jpg"
-    alt="Twilight Imperium: Fourth Edition"
-  />
-  <h3>
-    Twilight Imperium: Fourth Edition
-  </h3>
-</a>
-
-<a
-  class="games text-decoration-none"
-  href="https://www.miniaturemarket.com/ffgce01-42.html"
-  target="_blank"
->
-  <img class="images-art" src="/images/Cosmic-Box.jpg" alt="Cosmic Encounter" />
-  <h3>
-    Cosmic Encounter
-  </h3>
-</a>
-
-<a
-  class="games text-decoration-none"
-  href="https://www.miniaturemarket.com/awgaw10pp.html"
-  target="_blank"
->
-  <img
-    class="images-art"
-    src="/images/Picture-Perfect-Box.jpg"
-    alt="Picture Perfect"
-  />
-  <h3>
-    Picture Perfect
-  </h3>
-</a>
+<div class="row my-5">
+  <div class="col-12 border-bottom my-3 row">
+    <div class="store col-12 col-lg-6 my-2 mx-auto text-center">
+      <img src="/images/Long-Shot-Box.jpg" alt="Long Shot: The Dice Game" />
+    </div>
+    <div class="col-12 col-lg-6 my-2 mx-auto">
+      <a
+        class="text-decoration-none"
+        href="https://www.miniaturemarket.com/pex2002.html"
+        target="_blank"
+      >
+        <h4>
+          Long Shot: The Dice Game
+        </h4>
+      </a>
+      <h3>
+        Price: $19.99
+      </h3>
+      <h3>
+        Game Length: 20-30 minutes
+      </h3>
+      <h3>
+        Players: 1-8
+      </h3>
+      <h3>
+        Ages: 14+
+      </h3>
+    </div>
+  </div>
+  <div class="col-12 border-bottom my-3 row">
+    <div class="store col-12 col-lg-6 my-2 mx-auto text-center">
+      <img src="/images/TI-Box.jpg" alt="Twilight Imperium (4th Edition)" />
+    </div>
+    <div class="col-12 col-lg-6 my-2 mx-auto">
+      <a
+        class="text-decoration-none"
+        href="https://www.miniaturemarket.com/ffgti07.html"
+        target="_blank"
+      >
+        <h4>
+          Twilight Imperium (4th Edition)
+        </h4>
+      </a>
+      <h3>
+        Price: $131.99
+      </h3>
+      <h3>
+        Game Length: 240-480 minutes
+      </h3>
+      <h3>
+        Players: 3-6
+      </h3>
+      <h3>
+        Ages: 14+
+      </h3>
+    </div>
+  </div>
+  <div class="col-12 border-bottom my-3 row">
+    <div class="store col-12 col-lg-6 my-2 mx-auto text-center">
+      <img
+        src="/images/Cosmic-Box.jpg"
+        alt="Cosmic Encounter (42nd Anniversary Edition)"
+      />
+    </div>
+    <div class="col-12 col-lg-6 my-2 mx-auto">
+      <a
+        class="text-decoration-none"
+        href="https://www.miniaturemarket.com/ffgce01-42.html"
+        target="_blank"
+      >
+        <h4>
+          Cosmic Encounter (42nd Anniversary Edition)
+        </h4>
+      </a>
+      <h3>
+        Price: $55.99
+      </h3>
+      <h3>
+        Game Length: 60-120 minutes
+      </h3>
+      <h3>
+        Players: 3-5
+      </h3>
+      <h3>
+        Ages: 14+
+      </h3>
+    </div>
+  </div>
+  <div class="col-12 my-3 row">
+    <div class="store col-12 col-lg-6 my-2 mx-auto text-center">
+      <img src="/images/Picture-Perfect-Box.jpg" alt="Picture Perfect" />
+    </div>
+    <div class="col-12 col-lg-6 my-2 mx-auto">
+      <a
+        class="text-decoration-none"
+        href="https://www.miniaturemarket.com/awgaw10pp.html"
+        target="_blank"
+      >
+        <h4>
+          Picture Perfect
+        </h4>
+      </a>
+      <h3>
+        Price: $31.99
+      </h3>
+      <h3>
+        Game Length: 45 minutes
+      </h3>
+      <h3>
+        Players: 2-4
+      </h3>
+      <h3>
+        Ages: 10+
+      </h3>
+    </div>
+  </div>
+</div>
