--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@ h2 {
 }
 h3 {
   font-size: 1rem;
+  color: var(--tertiary);
 }
 h4 {
   font-size: 1.75rem;
@@ -84,7 +85,7 @@ footer {
   margin-top: 10px;
   border-top: 5px solid var(--tertiary);
 }
-.homepage-images-art {
+.images {
   height: 150px;
   width: 250px;
 }
@@ -117,30 +118,11 @@ footer {
   align-items: flex-start;
   flex-wrap: wrap;
 }
-.games {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 20px;
-  text-decoration: none;
+.store {
+  height: 300px;
 }
-.games:hover {
-  transform: scale(1.05);
-}
-
-.games > h3 {
-  color: var(--tertiary);
-}
-
-.games:hover > h3 {
-  color: var(--secondary);
-}
-
-.games:hover > #homepage-icon-titles {
-  color: var(--secondary);
-  text-decoration: none;
+.store img {
+  height: 100%;
 }
 /* forum css below */
 .threads {
