--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,10 @@ header {
   justify-content: space-between;
   align-items: center;
   border-bottom: 5px solid var(--tertiary);
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 9999;
 }
 #logoAndTitle {
   margin-left: 10px;
@@ -50,7 +54,7 @@ header {
   align-items: center;
 }
 #logo img {
-  height: 150px;
+  height: 125px;
 }
 h1 a {
   color: var(--tertiary);
