Changed the images on the article page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,6 +105,12 @@ footer {
   margin: 20px 0px;
   text-align: justify;
 }
+.pics-size {
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .comments {
   margin: 20px 0px;
   background-color: var(--primary);
