--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -1,4 +1,6 @@
-<a
+<div class="row my-5">
+<div class="col-3">
+  <a
   class="games text-decoration-none"
   href="https://www.miniaturemarket.com/pex2002.html"
   target="_blank"
@@ -12,22 +14,24 @@
     Long Shot: The Dice Game
   </h3>
 </a>
+</div>
 
-<a
+<div class="col-3 w-25"><a
   class="games text-decoration-none"
   href="https://www.miniaturemarket.com/ffgti07.html"
   target="_blank"
 >
   <img
-    class="images-art"
+    class=""
     src="/images/TI-Box.jpg"
     alt="Twilight Imperium: Fourth Edition"
   />
   <h3>
     Twilight Imperium: Fourth Edition
   </h3>
-</a>
+</a></div>
 
+<div class="col-3 w-25">
 <a
   class="games text-decoration-none"
   href="https://www.miniaturemarket.com/ffgce01-42.html"
@@ -37,9 +41,9 @@
   <h3>
     Cosmic Encounter
   </h3>
-</a>
+</a></div>
 
-<a
+<div class="col-3"><a
   class="games text-decoration-none"
   href="https://www.miniaturemarket.com/awgaw10pp.html"
   target="_blank"
@@ -52,4 +56,5 @@
   <h3>
     Picture Perfect
   </h3>
-</a>
+</a></div>
+</div>
