--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,6 +143,10 @@ footer {
   text-decoration: none;
 }
 /* forum css below */
+#threadCreation{
+  margin-top: 15px;
+}
+
 .threads {
   display: block;
   height: auto;
@@ -150,7 +154,12 @@ footer {
   margin-right: 25%;
   min-width: 50%;
   color: black;
+  border: solid 5px #0a598a;
+  background-color: #e6e6e6;
   text-decoration: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding:10px;
 }
 
 #threadLink {
@@ -159,7 +168,7 @@ footer {
 }
 
 #threadPoster {
-  color: black;
+  color: #2488c6;
   text-decoration: none;
 }
 
@@ -171,6 +180,8 @@ footer {
 .forumTitle {
   color: var(--tertiary);
   text-decoration: none !important;
+  background-color: #e6e6e6;
+  padding: 5px;
 }
 
 #threadTitle {
