--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -78,9 +78,10 @@
       class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
     >
       <a
-        class="text-decoration-none card-body d-flex flex-column justify-content-center align-items-center"
+        class="text-decoration-none card-body d-flex flex-column justify-content-center{{!-- align-items center is whats blocking the date from appearing left --}}"
         href="/article/{{id}}"
       >
+      <p>{{format_date article.created_at}}</p>
         <img
           class="homepage-images-art card-img-top"
           src="/images/{{article.images.0.filename}}"
@@ -89,7 +90,6 @@
         <h3 id="homepage-icon-titles" class="text-start card-title mt-2">
           {{article.title}}
         </h3>
-        <p>{{format_date article.created_at}}</p>
         <p>{{article.description}} </p>
 
       </a>
@@ -113,8 +113,4 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"
 ></script>
-<<<<<<< HEAD
-<script>var myCarousel = document.querySelector('#myCarousel') </script>
-=======
 <script>var myCarousel = document.querySelector('#myCarousel')</script>
->>>>>>> develop
