--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -78,7 +78,7 @@
       class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
     >
       <a
-        class="text-decoration-none card-body d-flex flex-column justify-content-center{{!-- align-items center is whats blocking the date from appearing left --}}"
+        class="text-decoration-none card-body d-flex flex-column justify-content-center"
         href="/article/{{id}}"
       >
       <p>{{format_date article.created_at}}</p>
