fixed css for john

--- a/views/forum-dashboard.handlebars
+++ b/views/forum-dashboard.handlebars
@@ -1,5 +1,5 @@
 <section>
-  <h2>Create New Post</h2>
+  <h2 id="createNewPost">Create New Post</h2>
 
   <div class="comments">
     <form class="new-post-form">
@@ -9,7 +9,7 @@
           type="text"
           id="comment-area"
           name="post-title"
-          class="form-input"
+          class="form-input form-control mb-2"
           placeholder="Your Title"
         />
       </div>
@@ -18,7 +18,7 @@
         <textarea
           id="comment-area"
           name="post-url"
-          class="form-input"
+          class="form-input form-control mb-2"
           placeholder="Your Post Text"
         ></textarea>
       </div>
