--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -9,7 +9,7 @@
         href="https://www.miniaturemarket.com/pex2002.html"
         target="_blank"
       >
-        <h4>
+        <h4 class="storeTitle">
           Long Shot: The Dice Game
         </h4>
       </a>
@@ -37,7 +37,7 @@
         href="https://www.miniaturemarket.com/ffgti07.html"
         target="_blank"
       >
-        <h4>
+        <h4 class="storeTitle">
           Twilight Imperium (4th Edition)
         </h4>
       </a>
@@ -68,7 +68,7 @@
         href="https://www.miniaturemarket.com/ffgce01-42.html"
         target="_blank"
       >
-        <h4>
+        <h4 class="storeTitle">
           Cosmic Encounter (42nd Anniversary Edition)
         </h4>
       </a>
@@ -96,7 +96,7 @@
         href="https://www.miniaturemarket.com/awgaw10pp.html"
         target="_blank"
       >
-        <h4>
+        <h4 class="storeTitle">
           Picture Perfect
         </h4>
       </a>
