--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,16 @@ footer {
   height: 150px;
   width: 250px;
 }
+
+.hoverHere{
+  color: #0a598a;
+}
+
+.hoverHere:hover{
+transform: scale(1.05);
+color: #2488c6;
+}
+
 .form-button {
   background-color: var(--tertiary);
   color: white;
@@ -105,6 +115,12 @@ footer {
   margin: 20px 0px;
   text-align: justify;
 }
+
+.articleDate{
+padding: 0 !important;
+margin: 0 !important;
+}
+
 .pics-size {
   max-width: 95%;
   margin-left: auto;
@@ -188,4 +204,9 @@ footer {
   color: var(--secondary);
   transform: scale(1.0025);
   text-decoration: underline;
+}
+
+#createNewPost{
+  margin-top: 10px;
+  color: #0a598a;
 }
