--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -78,10 +78,10 @@
       class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
     >
       <a
-        class="text-decoration-none card-body d-flex flex-column justify-content-center"
+        class="text-decoration-none card-body d-flex flex-column justify-content-center hoverHere"
         href="/article/{{id}}"
       >
-      <p>{{format_date article.created_at}}</p>
+      <p class="articleDate">{{format_date article.created_at}}</p>
         <img
           class="images card-img-top"
           src="/images/{{article.images.0.filename}}"
