--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,69 +1,31 @@
 {{! below is the carousel on the homepage }}
 <div id="myCarousel" class="row my-5">
-  <div
-    id="carouselExampleIndicators"
-    class="carousel slide col-12"
-    data-ride="carousel"
-  >
+  <div id="carouselExampleIndicators" class="carousel slide col-12" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li
-        data-target="#carouselExampleIndicators"
-        data-slide-to="0"
-        class="active"
-      ></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a
-          href="https://boardgamegeek.com/boardgame/187719/banner-saga-warbands"
-          target="_blank"
-        ><img
-            src="/images/bannerSagaBanner.jpg"
-            id="banner"
-            class="d-block w-100"
-            alt="a carousel of rotating game images, slide one"
-          /></a>
+        <a href="https://boardgamegeek.com/boardgame/187719/banner-saga-warbands" target="_blank"><img
+            src="/images/bannerSagaBanner.jpg" id="banner" class="d-block w-100"
+            alt="a carousel of rotating game images, slide one" /></a>
       </div>
       <div class="carousel-item">
-        <a
-          href="https://www.miniaturemarket.com/petcw-cg.html"
-          target="_blank"
-        ><img
-            src="/images/cthuluBanner.png"
-            id="banner"
-            class="d-block w-100"
-            alt="a carousel of rotating game images, slide two"
-          /></a>
+        <a href="https://www.miniaturemarket.com/petcw-cg.html" target="_blank"><img src="/images/cthuluBanner.png"
+            id="banner" class="d-block w-100" alt="a carousel of rotating game images, slide two" /></a>
       </div>
       <div class="carousel-item">
-        <a
-          href="https://www.miniaturemarket.com/cb72600.html"
-          target="_blank"
-        ><img
-            src="/images/40kBanner.jpg"
-            id="banner"
-            class="d-block w-100"
-            alt="a carousel of rotating game images, slide three"
-          /></a>
+        <a href="https://www.miniaturemarket.com/cb72600.html" target="_blank"><img src="/images/40kBanner.jpg"
+            id="banner" class="d-block w-100" alt="a carousel of rotating game images, slide three" /></a>
       </div>
     </div>
-    <a
-      class="carousel-control-prev"
-      href="#carouselExampleIndicators"
-      role="button"
-      data-slide="prev"
-    >
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a
-      class="carousel-control-next"
-      href="#carouselExampleIndicators"
-      role="button"
-      data-slide="next"
-    >
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -74,43 +36,26 @@
 <div class="row my-5">
   {{#each articles as |article|}}
 
-    <div
-      class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
-    >
-      <a
-        class="text-decoration-none card-body d-flex flex-column justify-content-center hoverHere"
-        href="/article/{{id}}"
-      >
+  <div class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center">
+    <a class="text-decoration-none card-body d-flex flex-column justify-content-center hoverHere"
+      href="/article/{{id}}">
       <p class="articleDate">{{format_date article.created_at}}</p>
-        <img
-          class="images card-img-top"
-          src="/images/{{article.images.0.filename}}"
-          alt="{{article.title}}"
-        />
-        <h3 id="homepage-icon-titles" class="text-start card-title mt-2">
-          {{article.title}}
-        </h3>
-        <p>{{article.description}} </p>
+      <img class="images card-img-top" src="/images/{{article.images.0.filename}}" alt="{{article.title}}" />
+      <h3 id="homepage-icon-titles" class="text-start card-title mt-2">
+        {{article.title}}
+      </h3>
+      <p class="briefArticleDescription">{{article.description}} </p>
 
-      </a>
-    </div>
+    </a>
+  </div>
   {{/each}}
 </div>
 
 {{! below is scripting for carousel }}
-<script
-  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>var myCarousel = document.querySelector('#myCarousel')</script>
