--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -37,9 +37,10 @@
     <h5>Comments:</h5>
     <div class="comments-display">
       {{#each article.article_comments as |article_comment|}}
-        <p class="comment-text">{{comment_text}}<span>
-            ({{user.username}}
-            {{format_date created_at}})</span></p>
+      <div class="comment-text">
+        <u>{{user.username}} posted at {{format_date created_at}}</u>
+        <p>{{comment_text}}</p>
+      </div>
       {{/each}}
     </div>
   </div>
