Updated header and homepage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -234,4 +234,15 @@ footer {
   nav {
     margin-left: 27px;
   }
+  .images {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #homepage-icon-titles {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .articleDate {
+    margin-left: 38px !important;
+  }
 }
