--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -218,7 +218,7 @@ footer {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 911px) {
   h1 {
-    font-size: 1.9rem;
+    font-size: 1.7rem;
     margin-top: 5px;
   }
   #logo img {
@@ -228,8 +228,12 @@ footer {
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media only screen and (max-width: 650px) {
+  h1 {
+    margin-left: 28px;
+  }
+
   h2 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
   nav {
     margin-left: 27px;
