--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,6 +221,9 @@ footer {
     font-size: 1.7rem;
     margin-top: 5px;
   }
+  h2 {
+    font-size: 1.5rem;
+  }
   #logo img {
     height: 50px;
   }
