--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,8 +166,8 @@ footer {
 .threads {
   display: block;
   height: auto;
-  margin-left: 10%;
-  margin-right: 10%;
+  /* margin-left: 10%;
+  margin-right: 10%; */
   min-width: 80%;
   color: black;
   border: solid 5px #0a598a;
@@ -229,6 +229,22 @@ footer {
   }
 }
 
+/* MEDIA QUERY FOR My PHONES WIDESCREEN */
+.images {
+  margin-left: auto;
+  margin-right: auto;
+}
+#homepage-icon-titles {
+  margin-left: auto;
+  margin-right: auto;
+}
+.articleDate {
+  margin-left: 114px !important;
+}
+.article-description {
+  text-align: center;
+}
+
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media only screen and (max-width: 650px) {
   h1 {
@@ -241,15 +257,19 @@ footer {
   nav {
     margin-left: 27px;
   }
-  .images {
+  /* .images {
     margin-left: auto;
     margin-right: auto;
-  }
-  #homepage-icon-titles {
+  } */
+  /* #homepage-icon-titles {
     margin-left: auto;
     margin-right: auto;
-  }
+  } */
   .articleDate {
-    margin-left: 38px !important;
+    margin-left: 28px !important;
+  }
+  .article-container {
+    margin-left: 1px;
+    margin-right: 1px;
   }
 }
