--- a/views/aticles.handlebars
+++ b/views/aticles.handlebars
@@ -1,4 +1,4 @@
-<article class="row">
+<article class="row article-container">
   <h4 class="col-12 text-center">{{article.title}}</h4>
   <h3 class="col-12 text-center">&#9856 &#9857 &#9858 &#9859 &#9860 &#9861
     &#9860 &#9859 &#9858 &#9857 &#9856</h3>
@@ -44,7 +44,7 @@
       {{/each}}
     </div>
   </div>
-</div>
+</article>
 
 </article>
 {{#if loggedIn}}
