--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,8 +166,6 @@ footer {
 .threads {
   display: block;
   height: auto;
-  /* margin-left: 10%;
-  margin-right: 10%; */
   min-width: 80%;
   color: black;
   border: solid 5px #0a598a;
@@ -229,20 +227,22 @@ footer {
   }
 }
 
-/* MEDIA QUERY FOR My PHONES WIDESCREEN */
-.images {
-  margin-left: auto;
-  margin-right: auto;
-}
-#homepage-icon-titles {
-  margin-left: auto;
-  margin-right: auto;
-}
-.articleDate {
-  margin-left: 114px !important;
-}
-.article-description {
-  text-align: center;
+/* MEDIA QUERY FOR MY PHONES WIDESCREEN */
+@media only screen and (max-width: 670px) {
+  .images {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #homepage-icon-titles {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .articleDate {
+    margin-left: 114px !important;
+  }
+  .article-description {
+    text-align: center;
+  }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -257,14 +257,7 @@ footer {
   nav {
     margin-left: 27px;
   }
-  /* .images {
-    margin-left: auto;
-    margin-right: auto;
-  } */
-  /* #homepage-icon-titles {
-    margin-left: auto;
-    margin-right: auto;
-  } */
+
   .articleDate {
     margin-left: 28px !important;
   }
