--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -73,9 +73,8 @@
 {{! below is the handlebars for the articles on the main page }}
 <div class="row my-5">
   {{#each articles as |article|}}
-
     <div
-      class="card border-0 col-xl-3 col-lg-4 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
+      class="card border-0 col-xl-3 col-md-6 col-sm-12 flex-row justify-content-center align-items-center"
     >
       <a
         class="text-decoration-none card-body d-flex flex-column justify-content-center hoverHere"
